Fixing hero responsive cropping

--- a/grav/user/themes/haywire/sass/partials/_heros.sass
+++ b/grav/user/themes/haywire/sass/partials/_heros.sass
@@ -9,6 +9,7 @@
     flex-direction: column
     position: relative
     flex-wrap: wrap
+    background-position: center;
     @include break-max($tablet)
         min-height: 400px
         height: auto
